[gd_scene load_steps=6 format=2]

[ext_resource path="res://Anton-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interfaz.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="scorelabel" type="Label" parent="."]
margin_left = 135.0
margin_top = 39.0
margin_right = 219.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensaje" type="Label" parent="."]
margin_left = 26.881
margin_top = 139.538
margin_right = 334.881
margin_bottom = 217.538
custom_fonts/font = SubResource( 2 )
text = "Knigth in the space"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonplay" type="Button" parent="."]
margin_left = 45.2242
margin_top = 444.56
margin_right = 289.224
margin_bottom = 507.56
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_pressed = Color( 0.137255, 0.215686, 0.580392, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="botonplay" to="." method="_on_botonplay_pressed"]
[connection signal="timeout" from="mensajeTimer" to="." method="_on_mensajeTimer_timeout"]
